# clewso

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml  ruff.toml
.github/workflows/: docs.yml  publish.yml
docs/: index.md
docs/api/: graph.md  policies.md  search.md
docs/architecture/: overview.md  packages.md
docs/blog/: dependency-aware-review.md
docs/getting-started/: editors.md  install.md  quickstart.md
docs/guides/: indexing.md  mcp-tools.md  review.md
src/clew/: __init__.py  cli.py  client.py  config.py  hooks.py  setup.py  stores.py
src/clew/mcp/: client.py  errors.py  formatters.py  server.py
src/clew/review/: context.py  crate_context.py  graph.py  llm.py  policy.py
src/clew/server/: config.py  dependencies.py  main.py
src/clew/server/adapters/: __init__.py  base.py  embeddings.py  ladybug.py  neo4j.py  noop_graph.py  pgvector.py  qdrant.py  registry.py  reranker.py  validation.py
src/clew/server/routes/: graph.py  policies.py  search.py  stats.py
tests/: conftest.py  test_cli.py  test_config.py  test_integration.py  test_protocol_extraction.py
tests/bench/: conftest.py  test_arena.py  test_coding_llm.py  test_engines.py  test_judge.py  test_models.py  test_report.py
tests/e2e/: conftest.py  test_fixture_structure.py  test_ingest_fixture.py
tests/fixtures/sample_repo/: app.py  config.py  db.py
tests/fixtures/sample_repo/models/: __init__.py  user.py
tests/fixtures/sample_repo/routes/: __init__.py  users.py
tests/fixtures/sample_repo/utils/: auth.py
tests/mcp/: conftest.py  test_client.py  test_errors.py  test_formatters.py  test_server.py
tests/quality/: BASELINE_REPORT.md  IMPROVEMENT_PROOF.md  RERANKER_REPORT.md  benchmark_reranker.py  gold_set.json  measure_mrr.py  test_reranker_integration.py
tests/review/: test_context.py  test_graph.py  test_llm.py  test_policy.py
tests/server/: conftest.py  test_adapter_registry.py  test_embeddings.py  test_graph.py  test_graph_pr.py  test_health.py  test_neo4j_adapter.py  test_pipeline_integration.py  test_policies.py  test_protocol_validation.py  test_reranker.py  test_search.py  test_search_limits.py
tests/server/adapters/: test_ladybug.py  test_neo4j.py  test_qdrant.py
