[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clewso"
version = "0.1.5"
description = "🧶 Context Engine for AI Agents - Hybrid vector + graph code search"
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.11"
authors = [
    { name = "Matt Davidson", email = "matt@matchdav.io" }
]
keywords = ["ai", "agents", "code-search", "mcp", "context"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
    "tenacity>=8.2.0",
    "clewso-ingestion>=0.1.0",
]

[project.optional-dependencies]
server = [
    "asyncpg>=0.29.0",
    "fastapi>=0.109.0",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sentence-transformers>=2.2.2",
    "uvicorn[standard]>=0.27.0",
]
mcp = [
    "mcp>=1.0.0",
    "pydantic>=2.5.0",
]
all = [
    "clewso[server]",
    "clewso[mcp]",
]

[dependency-groups]
dev = [
    "clewso[all]",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "respx>=0.20.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[project.scripts]
clewso = "clew.cli:app"

[project.urls]
Homepage = "https://github.com/clewnet/clewso"
Documentation = "https://github.com/clewnet/clewso#readme"
Repository = "https://github.com/clewnet/clewso"
Issues = "https://github.com/clewnet/clewso/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/clew"]

[tool.ruff]
extend = "ruff.toml"
target-version = "py311"

[tool.mypy]
explicit_package_bases = true
namespace_packages = true
exclude = ["tests", "bench"]

[[tool.mypy.overrides]]
module = "celery.*"
ignore_missing_imports = true

[tool.uv.workspace]
members = ["packages/clew-core", "packages/clew-ingestion"]

[tool.uv.sources]
clewso-ingestion = { workspace = true }
clewso-core = { workspace = true }
